--- a/learnweb3.io/Freshman/NFT-Tutorial/package.json
+++ b/learnweb3.io/Freshman/NFT-Tutorial/package.json
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "flat": ">=5.0.1",
+    "minimatch": ">=3.0.5"
   }
 }
