--- a/learnweb3.io/Freshman/NFT-Tutorial/package.json
+++ b/learnweb3.io/Freshman/NFT-Tutorial/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/prounckk/learnings.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,17 +23,20 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.1",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.3",
+    "@types/mocha": "^9.1.0",
     "chai": "^4.3.6",
     "ethers": "^5.7.1",
     "hardhat": "^2.12.0",
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.2",
-    "typechain": "^8.1.0"
+    "typechain": "^8.1.0",
+    "flat": "^5.0.1",
+    "minimatch": "^3.0.5",
+    "typescript": ">=4.3.0",
+    "ts-node": ">=8.0.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
-    "dotenv": "^16.0.3",
-    "flat": ">=5.0.1",
-    "minimatch": ">=3.0.5"
+    "dotenv": "^16.0.3"
   }
 }
