--- a/learnweb3.io/Freshman/NFT-Tutorial/package.json
+++ b/learnweb3.io/Freshman/NFT-Tutorial/package.json
@@ -16,27 +16,30 @@
   "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@nomiclabs/hardhat-ethers": "^2.2.0",
-    "@nomiclabs/hardhat-etherscan": "^3.1.1",
-    "@typechain/ethers-v5": "^10.1.0",
-    "@typechain/hardhat": "^6.1.3",
-    "@types/mocha": "^9.1.0",
-    "chai": "^4.3.6",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.8",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@typechain/ethers-v5": "^6.0.5",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/mocha": "^10.0.7",
+    "chai": "^4.5.0",
     "ethers": "^6.13.1",
-    "hardhat": "^2.12.0",
-    "hardhat-gas-reporter": "^1.0.9",
-    "solidity-coverage": "^0.8.2",
-    "typechain": "^8.1.0",
-    "flat": "^5.0.1",
-    "minimatch": "^3.0.5",
+    "flat": "^6.0.1",
+    "hardhat": "^2.22.6",
+    "hardhat-gas-reporter": "^2.0.0",
+    "minimatch": "^10.0.1",
+    "solidity-coverage": "^0.8.12",
+    "ts-node": ">=8.0.0",
+    "typechain": "^8.3.2",
     "typescript": ">=4.3.0",
-    "ts-node": ">=8.0.0"
+    "ws": ">=7.5.10"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.6",
-    "dotenv": "^16.0.3"
+    "@openzeppelin/contracts": "^5.0.2",
+    "dotenv": "^16.4.5"
   }
 }
+
+
