--- a/learnweb3.io/Freshman/NFT-Tutorial/package.json
+++ b/learnweb3.io/Freshman/NFT-Tutorial/package.json
@@ -38,7 +38,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "ws": ">=7.5.10"
   }
 }
 
